tdf#170588 docx export: stop duplicating bookmark starts

Bookmarks can span multiple nodes.
Since we weren't checking the node
we were often adding the bookmark start multiple times,
once for the start node and again for the end node.
This is guaranteed to happen for any bookmark
starting at position zero, and possible for the other positions.

An extra end bookmark doesn't matter,
because it isn't written if it doesn't find the name in the starts.

A similar fix was needed for comments in bug 170457.

make CppunitTest_sw_ooxmlexport20 CPPUNIT_TEST_NAME=testFdo77129

Change-Id: I595595a2b48aabf861179ade1b3097fc31e2a12e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198620
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit fe67e1899b3d3322b4e6721349af51a0c0416383)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198997
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>